ingresss_rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-grafana-ing
  namespace: ibm-ucd
spec:
  ingressClassName: nginx
  rules:
    - host: prm.damandan.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
            path: /
    - host: mgr.damandan.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-alertmanager
                port:
                  number: 80
            path: /
    - host: gra.damandan.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
